// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button blue button 1`] = `
<a
  className="button_tk8a3j-o_O-blue_8qkqhj"
  onClick={undefined}
>
  <span
    className="LabelLarge_19qk49e"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Button gold button 1`] = `
<a
  className="button_tk8a3j-o_O-gold_13p1uyi"
  onClick={undefined}
>
  <span
    className="LabelLarge_19qk49e"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Button green button 1`] = `
<a
  className="button_tk8a3j-o_O-green_wcschq"
  onClick={undefined}
>
  <span
    className="LabelLarge_19qk49e"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Button red button 1`] = `
<a
  className="button_tk8a3j-o_O-red_1u3r2w"
  onClick={undefined}
>
  <span
    className="LabelLarge_19qk49e"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Core all 1`] = `
<div>
  <span
    className=""
    style={Object {}}
  >
    Text
  </span>
  <div
    className=""
    style={Object {}}
  >
    View
  </div>
</div>
`;

exports[`Storyshots Core/Text aphrodite styles 1`] = `
<span
  className="pink_th4aeu"
  style={Object {}}
>
  Text
</span>
`;

exports[`Storyshots Core/Text multiple Aphrodite styles 1`] = `
<span
  className="pink_th4aeu-o_O-bold_hq5slr"
  style={Object {}}
>
  Text
</span>
`;

exports[`Storyshots Core/Text multiple text elements 1`] = `
<div>
  <span
    className="bold_hq5slr"
    style={Object {}}
  >
    Text
  </span>
  <span
    className="pink_th4aeu"
    style={Object {}}
  >
    Text
  </span>
</div>
`;

exports[`Storyshots Core/Text text 1`] = `
<span
  className=""
  style={Object {}}
>
  Text
</span>
`;

exports[`Storyshots Core/View aphrodite styles 1`] = `
<div
  className="pink_th4aeu"
  style={Object {}}
>
  View
</div>
`;

exports[`Storyshots Core/View multiple Aphrodite styles 1`] = `
<div
  className="pink_th4aeu-o_O-bold_hq5slr"
  style={Object {}}
>
  Text
</div>
`;

exports[`Storyshots Core/View multiple view elements 1`] = `
<div>
  <div
    className="bold_hq5slr"
    style={Object {}}
  >
    Text
  </div>
  <div
    className="pink_th4aeu"
    style={Object {}}
  >
    Text
  </div>
</div>
`;

exports[`Storyshots Core/View view 1`] = `
<div
  className=""
  style={Object {}}
>
  View
</div>
`;

exports[`Storyshots Typography all 1`] = `
<div>
  <div>
    <h1
      className="Title_pg0x2d"
      style={
        Object {
          "marginBottom": 0,
          "marginTop": 0,
        }
      }
    >
      Title
    </h1>
  </div>
  <div>
    <span
      className="Tagline_13wg9ps"
      style={Object {}}
    >
      Tagline
    </span>
  </div>
  <div>
    <h2
      className="HeadingLarge_1y2mmy6"
      style={
        Object {
          "marginBottom": 0,
          "marginTop": 0,
        }
      }
    >
      HeadingLarge
    </h2>
  </div>
  <div>
    <h3
      className="HeadingMedium_17b4v23"
      style={
        Object {
          "marginBottom": 0,
          "marginTop": 0,
        }
      }
    >
      HeadingMedium
    </h3>
  </div>
  <div>
    <h4
      className="HeadingSmall_1vtz1kj"
      style={
        Object {
          "marginBottom": 0,
          "marginTop": 0,
        }
      }
    >
      HeadingSmall
    </h4>
  </div>
  <div>
    <h4
      className="HeadingXSmall_1eifnrn"
      style={
        Object {
          "marginBottom": 0,
          "marginTop": 0,
        }
      }
    >
      HeadingXSmall
    </h4>
  </div>
  <div>
    <span
      className="BodySerifBlock_1q1y0lf"
      style={Object {}}
    >
      BodySerifBlock
    </span>
  </div>
  <div>
    <span
      className="BodySerif_czdgjk"
      style={Object {}}
    >
      BodySerif
    </span>
  </div>
  <div>
    <span
      className="BodyMonospace_1s34hz9"
      style={Object {}}
    >
      BodyMonospace
    </span>
  </div>
  <div>
    <span
      className="Body_aye3wz"
      style={Object {}}
    >
      Body
    </span>
  </div>
  <div>
    <span
      className="LabelLarge_19qk49e"
      style={Object {}}
    >
      LabelLarge
    </span>
  </div>
  <div>
    <span
      className="LabelMedium_1y2bm6p"
      style={Object {}}
    >
      LabelMedium
    </span>
  </div>
  <div>
    <span
      className="LabelSmall_xwaspk"
      style={Object {}}
    >
      LabelSmall
    </span>
  </div>
  <div>
    <span
      className="LabelXSmall_1ot4900"
      style={Object {}}
    >
      LabelXSmall
    </span>
  </div>
  <div>
    <span
      className="Caption_1d6h637"
      style={Object {}}
    >
      Caption
    </span>
  </div>
  <div>
    <span
      className="Footnote_1h6ehge"
      style={Object {}}
    >
      Footnote
    </span>
  </div>
</div>
`;

exports[`Storyshots Typography/Body default 1`] = `
<span
  className="Body_aye3wz"
  style={Object {}}
>
  Body
</span>
`;

exports[`Storyshots Typography/Body styled 1`] = `
<span
  className="Body_aye3wz-o_O-blue_1tsdo2i"
  style={Object {}}
>
  Body
</span>
`;

exports[`Storyshots Typography/BodyMonospace default 1`] = `
<span
  className="BodyMonospace_1s34hz9"
  style={Object {}}
>
  BodyMonospace
</span>
`;

exports[`Storyshots Typography/BodyMonospace styled 1`] = `
<span
  className="BodyMonospace_1s34hz9-o_O-blue_1tsdo2i"
  style={Object {}}
>
  BodyMonospace
</span>
`;

exports[`Storyshots Typography/BodySerif default 1`] = `
<span
  className="BodySerif_czdgjk"
  style={Object {}}
>
  BodySerif
</span>
`;

exports[`Storyshots Typography/BodySerif styled 1`] = `
<span
  className="BodySerif_czdgjk-o_O-blue_1tsdo2i"
  style={Object {}}
>
  BodySerif
</span>
`;

exports[`Storyshots Typography/BodySerifBlock default 1`] = `
<span
  className="BodySerifBlock_1q1y0lf"
  style={Object {}}
>
  BodySerifBlock
</span>
`;

exports[`Storyshots Typography/BodySerifBlock styled 1`] = `
<span
  className="BodySerifBlock_1q1y0lf-o_O-blue_1tsdo2i"
  style={Object {}}
>
  BodySerifBlock
</span>
`;

exports[`Storyshots Typography/Caption default 1`] = `
<span
  className="Caption_1d6h637"
  style={Object {}}
>
  Caption
</span>
`;

exports[`Storyshots Typography/Caption styled 1`] = `
<span
  className="Caption_1d6h637-o_O-blue_1tsdo2i"
  style={Object {}}
>
  Caption
</span>
`;

exports[`Storyshots Typography/Footnote default 1`] = `
<span
  className="Footnote_1h6ehge"
  style={Object {}}
>
  Footnote
</span>
`;

exports[`Storyshots Typography/Footnote styled 1`] = `
<span
  className="Footnote_1h6ehge-o_O-blue_1tsdo2i"
  style={Object {}}
>
  Footnote
</span>
`;

exports[`Storyshots Typography/HeadingLarge default 1`] = `
<h2
  className="HeadingLarge_1y2mmy6"
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  HeadingLarge
</h2>
`;

exports[`Storyshots Typography/HeadingLarge styled 1`] = `
<h2
  className="HeadingLarge_1y2mmy6-o_O-blue_1tsdo2i"
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  HeadingLarge
</h2>
`;

exports[`Storyshots Typography/HeadingMedium default 1`] = `
<h3
  className="HeadingMedium_17b4v23"
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  HeadingMedium
</h3>
`;

exports[`Storyshots Typography/HeadingMedium styled 1`] = `
<h3
  className="HeadingMedium_17b4v23-o_O-blue_1tsdo2i"
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  HeadingMedium
</h3>
`;

exports[`Storyshots Typography/HeadingSmall default 1`] = `
<h4
  className="HeadingSmall_1vtz1kj"
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  HeadingSmall
</h4>
`;

exports[`Storyshots Typography/HeadingSmall styled 1`] = `
<h4
  className="HeadingSmall_1vtz1kj-o_O-blue_1tsdo2i"
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  HeadingSmall
</h4>
`;

exports[`Storyshots Typography/HeadingXSmall default 1`] = `
<h4
  className="HeadingXSmall_1eifnrn"
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  HeadingXSmall
</h4>
`;

exports[`Storyshots Typography/HeadingXSmall styled 1`] = `
<h4
  className="HeadingXSmall_1eifnrn-o_O-blue_1tsdo2i"
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  HeadingXSmall
</h4>
`;

exports[`Storyshots Typography/LabelLarge default 1`] = `
<span
  className="LabelLarge_19qk49e"
  style={Object {}}
>
  LabelLarge
</span>
`;

exports[`Storyshots Typography/LabelLarge styled 1`] = `
<span
  className="LabelLarge_19qk49e-o_O-blue_1tsdo2i"
  style={Object {}}
>
  LabelLarge
</span>
`;

exports[`Storyshots Typography/LabelMedium default 1`] = `
<span
  className="LabelMedium_1y2bm6p"
  style={Object {}}
>
  LabelMedium
</span>
`;

exports[`Storyshots Typography/LabelMedium styled 1`] = `
<span
  className="LabelMedium_1y2bm6p-o_O-blue_1tsdo2i"
  style={Object {}}
>
  LabelMedium
</span>
`;

exports[`Storyshots Typography/LabelSmall default 1`] = `
<span
  className="LabelSmall_xwaspk"
  style={Object {}}
>
  LabelSmall
</span>
`;

exports[`Storyshots Typography/LabelSmall styled 1`] = `
<span
  className="LabelSmall_xwaspk-o_O-blue_1tsdo2i"
  style={Object {}}
>
  LabelSmall
</span>
`;

exports[`Storyshots Typography/LabelXSmall default 1`] = `
<span
  className="LabelXSmall_1ot4900"
  style={Object {}}
>
  LabelXSmall
</span>
`;

exports[`Storyshots Typography/LabelXSmall styled 1`] = `
<span
  className="LabelXSmall_1ot4900-o_O-blue_1tsdo2i"
  style={Object {}}
>
  LabelXSmall
</span>
`;

exports[`Storyshots Typography/Tagline default 1`] = `
<span
  className="Tagline_13wg9ps"
  style={Object {}}
>
  Tagline
</span>
`;

exports[`Storyshots Typography/Tagline styled 1`] = `
<span
  className="Tagline_13wg9ps-o_O-blue_1tsdo2i"
  style={Object {}}
>
  Tagline
</span>
`;

exports[`Storyshots Typography/Title default 1`] = `
<h1
  className="Title_pg0x2d"
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  Title
</h1>
`;

exports[`Storyshots Typography/Title styled 1`] = `
<h1
  className="Title_pg0x2d-o_O-blue_1tsdo2i"
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
    }
  }
>
  Title
</h1>
`;
